# yargitay-mcp

./: README.md  main.py  pyproject.toml  requirements.txt  test_local.py
yargitay_mcp/: client.py  models.py  server.py
