[project]
name = "yargitay-mcp"
version = "0.1.0"
description = "Yargıtay Karar Arama MCP sunucusu (karararama.yargitay.gov.tr)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "markitdown>=0.0.1a2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yargitay_mcp"]
